@@ -2,6 +2,7 @@
 setting.
 - use a temporary filename to not overwrite existant files in ~/.themes 
 (Closes: #97180).
+- theme-thumbnailer doesn't require an absolute path (Closes: #153203).
 
 gnome-control-center 2.8.1
 
